<resources>
    <string name="app_name" translatable="false">Face Attendance</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">FaceAttendance</string>
    <string name="nav_header_subtitle" translatable="false">contacto@fruitoftek.com</string>
    <string name="nav_header_desc" translatable="false">Face Attendance App</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="action_face_recognition_test" translatable="false">Face Recognition Test</string>

    <string name="button_open_attendance_face_activity" translatable="false">Attendance by Face</string>
    <string name="button_add_user" translatable="false">Add User</string>
    <string name="button_save" translatable="false">Save</string>
    <string name="button_record" translatable="false">Record</string>
    <string name="button_cancel" translatable="false">Cancel</string>
    <string name="button_delete" translatable="false">Delete</string>
    <string name="button_goback" translatable="false">Go Back</string>
    <string name="editText_user_search" translatable="false">Search</string>
    <string name="editText_user_id" translatable="false">User Id.</string>
    <string name="editText_user_name" translatable="false">Name</string>
    <string name="editText_password" translatable="false">Password</string>
    <string name="switch_active" translatable="false">Active</string>
    <string name="editText_card" translatable="false">Card</string>
    <string name="textView_setBioPhoto" translatable="false">Click to Update the BioPhoto</string>
    <string name="user_upsert_set_bioPhoto_not_saved" translatable="false">Please save the user before trying to update the BioPhoto</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_users" translatable="false">Users</string>
    <string name="menu_attrecords" translatable="false">Att. Records</string>
    <string name="menu_users_upsert" translatable="false">Users Upsert</string>
    <string name="menu_settings" translatable="false">Settings</string>
    <string name="menu_attendance_password" translatable="false">Attendance by Password</string>

    <string name="tfe_od_app_name" translatable="false" translation_description="Attendance app [CHAR_LIMIT=40]">Face Attendance</string>
    <string name="tfe_od_camera_error" translatable="false" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>

    <string name="activity_update_biophoto" translatable="false">Update BioPhoto</string>
    <string name="activity_update_biophoto_ok" translatable="false">Use this BioPhoto?</string>
    <string name="activity_update_biophoto_try" translatable="false">Try again</string>
    <string name="activity_update_biophoto_duplicate" translatable="false">Face Already in Registry</string>

    <string name="activity_android_face_detector_test" translatable="false">Face Recognition Test</string>

    <string name="activity_attendance_record_by_face_multiple_faces" translatable="false">Only one face at a time should be on camera</string>
    <string name="activity_attendance_record_by_face_ok" translatable="false">Attendance registered!</string>

    <string name="loadingData" translatable="false">Loading Data...</string>
    <string name="bioPhotoSet" translatable="false">BioPhoto is set</string>
    <string name="noPhoto" translatable="false">No BioPhoto</string>

    <string name="verifyType_Password" translatable="false">Password</string>
    <string name="verifyType_Face" translatable="false">Face</string>

    <string name="settings_category_general" translatable="false">General</string>
    <string name="settings_category_attendance" translatable="false">Attendance Configuration</string>
    <string name="settings_deviceSn" translatable="false">Device Serial Number</string>
    <string name="settings_att_interval_face" translatable="false">Same face att. record interval</string>
</resources>