<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_category_general">

        <EditTextPreference
            app:defaultValue=""
            app:key="deviceSn"
            app:title="@string/settings_deviceSn"
            app:enabled="false"
            app:selectable="false"
            app:shouldDisableView="false"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


    <PreferenceCategory app:title="@string/settings_category_attendance">

        <ListPreference
            app:defaultValue="5"
            app:key="faceAttInterval"
            app:entries="@array/face_att_interval_entries"
            app:entryValues="@array/face_att_interval_values"
            app:title="@string/settings_att_interval_face"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>