<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.passwordattendance.AttendanceByPasswordFragment">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <LinearLayout
        android:id="@+id/fullscreenContent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <EditText
                android:id="@+id/editText_attendance_pass_user_id"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:minHeight="8dp"
                android:textAlignment="center"
                android:fontFamily="sans-serif-light"
                android:hint="@string/editText_user_id"
                android:inputType="number"
                android:layout_margin="16dp"
                android:textSize="25sp" />
            <EditText
                android:id="@+id/eeditText_attendance_pass_user_password"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:minHeight="8dp"
                android:textAlignment="center"
                android:fontFamily="sans-serif-light"
                android:hint="@string/editText_password"
                android:inputType="numberPassword"
                android:layout_margin="16dp"
                android:textSize="25sp" />
            <Button
                android:id="@+id/button_record"
                android:layout_width="250dp"
                android:layout_height="75dp"
                android:text="@string/button_save"
                android:layout_margin="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>
    </LinearLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="@style/Widget.Theme.SurfingAttendance.ButtonBar.Fullscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/button_goback"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_goback" />

        </LinearLayout>
    </FrameLayout>

</FrameLayout>